data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1798.wast
;; 9. **Test Description**:    - **Test Name**: Conditional Branch with Fallback Function Call    - **Description**: Implement a `br_if` that conditionally skips a fallback function call, ensuring proper branch condition handling and function invocation.    - **Constraint Check**: Validates correct skipping or invoking of the fallback function.    - **Improper Handling**: Tests behavior when the fallback mechanism is improperly skipped or incorrectly invoked.

(assert_invalid
  (module
    (func $conditional-branch-with-fallback-call (result i32)
      (block $outer (result i32)
        (block $inner (result i32)
          (i32.const 0) ; Condition
          (br_if $outer)
          (call $fallback-function)
        )
      )
    )
    (func $fallback-function (result i32) (i32.const 42))
  )
  "type mismatch"
)